Compiles with windows gcc

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "makefile.makePath": "C:\\MinGW\\msys\\1.0\\bin\\make.exe"
+    "makefile.makePath": "C:\\MinGW\\msys\\1.0\\bin\\make.exe",
+    "makefile.makefilePath": "D:\\main\\proj\\crosshair\\Makefile"
 }
